--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
-.textcenter{
-text-align: center;
-}
 body{
     margin: 0;
-    background-color: #39379E;
+    background: linear-gradient( #39379E,#556071);
     font-family: 'Muli', sans-serif;
+    background-repeat: round;
+    background-size: contain;
+    height: 100vh;
+}
+h2{
+    color: azure;
 }
 .header {
-    background-color:#5D5BAF;
-    width: 100%;
+    background-color:#39379E;
     height: 80px;
    /* border-bottom: solid 5px #C1C9C3;*/
     box-shadow: 2px 10px 25px 10px rgba(0, 0, 0, 0.5);
@@ -58,5 +60,116 @@ body{
 }
 .header__menu__profile_image{
  width: 70px;
- 
 }
+.buscador{
+    margin-top: 5%;
+}
+.buscador__container__h2{
+    text-align: center;
+    color :white
+}
+.buscador__container{
+    display: flex;
+    justify-content: center;
+}
+.input{
+    color: white;
+    font-size: 16px;
+    width: 60%;
+    height: 25px;
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 25px;
+    border: 1px #FED766 solid;
+    background-color: rgba(255, 255, 255, 0.1);
+    transition: 450ms all;
+    transform-origin: center left;
+}
+.input::placeholder{
+    color: white;
+}
+.input:focus{
+    outline: 0px;
+}
+.carrusel{
+    margin-top: 50px;
+    position: relative;
+    width: 100%;
+    padding: 30px 0px;
+}
+.carrusel__container{
+margin: 0px 20px ;
+padding: 70px;
+white-space: nowrap;
+ overflow-x: scroll;
+}
+.carrusel-item{
+    width: 200px;
+    height: 250px;
+    border-radius: 20px;
+    background-color: gray;
+    overflow: hidden;
+    margin-right: 10px;
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+}
+.carrusel-item:hover ~ .carrusel-item{
+ transform: translate3d(50px,0,0);
+}
+.carrusel__container:hover .carrusel-item{
+    opacity: 0.2;
+}
+.carrusel__container:hover .carrusel-item:hover{
+    transform: scale(1.5);
+    opacity: 1;
+}
+.carrusel-item__image{
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+}
+.carrusel-item__details{
+   background:linear-gradient(to top, rgba(0, 0, 0, 0.5) 0%,rgba(0, 0, 0, 0)100%);
+    font-size: 10px;
+    transition: 450ms opacity;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: flex-end;
+}
+.carrusel-item__details:hover{
+    opacity: 1;
+}
+.carrusel__title{
+    margin-left: 15px;
+}
+.carrusel-item__controls--container{
+    padding: 10px 25PX;
+    margin: 0;
+}
+.carrusel-item__controls--container p{
+    margin: 5px 0 0 10px;
+    color: whitesmoke;
+}
+.contrls__image{
+    width: 50px;
+}
+.scrollesp::-webkit-scrollbar {
+    width: 6px;     /* Tamaño del scroll en vertical */
+    height: 6px;    /* Tamaño del scroll en horizontal */
+   
+}
+.scrollesp::-webkit-scrollbar-thumb {
+    background: ccc;
+    border-radius: 3px;
+}
+.scrollesp::-webkit-scrollbar-thumb {
+    background: #150578;
+    border-radius: 3px;
+}
+
